# Networks-and-System-Sec-Portfolio

./: README.md  pyproject.toml
Bin Analysis Symbolic Exec/: main.py
GenAI/: GenAI_Threat_Vectors.ipynb  ollama.py
Pentesting/: nmap.py
crypto/: key_gen.py  receiver.py  sender.py
malicious software/: SHA_hash.py  file_hashes.csv  file_sniffer.py  signature_scan.py  worm.py
password-analysis/: auth.py  brute.py  main.py  passwds.txt  password_meter.py  salt and pepper.py
